# mcp-server-template

./: README.md  pyproject.toml  requirements.txt
src/mcp_template/: __init__.py  config.py  connector.py  drd_extractor.py  example_source_provider.py  server.py  tool_provider.py
tests/: conftest.py  test_basic_server.py
